src/test/ui/parser/issue-10636-2.stderr
error: expected one of `)`, `,`, `.`, `?`, or an operator, found `;`
  --> $DIR/issue-10636-2.rs:5:25
   |
LL |     option.map(|some| 42;
   |               -         ^
   |               |         |
   |               |         help: `)` may belong here
   |               in order to close this...

error: expected expression, found `)`
  --> $DIR/issue-10636-2.rs:8:1
   |
LL | }
   | ^ expected expression

error: aborting due to 2 previous errors

